[package]
name = "zenoh-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
rcgen = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["full"] }
zenoh = { version = "1.8.0", features = ["shared-memory", "unstable"] }

[[bin]]
name = "bench-server"
path = "src/bin/bench_server.rs"

[[bin]]
name = "bench-client"
path = "src/bin/bench_client.rs"
